add Listener for Event and Painting